Fixed advanced search page from being too wide

--- a/css/advanced.css
+++ b/css/advanced.css
@@ -1,26 +1,30 @@
-head, body {
+body {
     font-family: 'Open Sans', Arial, sans-serif;
-    color: #000;
-}
-
-.navbar-header {
-    height: 50px;
+    font-size: 0;
 }
 
 #advanced-menu {
     display: block;
-    width: 600px;
-    margin-top: -10px;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 30px;
     font-size: 20px;
-    padding: 1px 40px 20px 20px;
+}
+
+@media (min-width: 801px) and (max-width: 1241px) {
+    #advanced-menu {
+        margin-top: 100px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 800px) {
+    #advanced-menu {
+        margin-top: 150px;
+    }
 }
 
 #advanced-menu h1 {
     font-weight: bold;
-}
-
-.col-lg-6 {
-    width: 95%;
 }
 
 input[type="checkbox"] {
